style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* General Styling */

body {
    background-color: rgb(46, 46, 46);
    font-family: Ubuntu, sans-serif;
    text-align: center;
}

/* Nav Bar */

nav {
    position: fixed;
    display: none;
}

ul {
    color: rgb(46, 46, 46);
    display: flex;
    justify-content: space-between;
    width: 120%;
    margin: 2%;
    list-style-type: none;
    font-size: 2.5vw;
    font-weight: bold;
    padding: 0.5em;
    border-radius: 50px;
    background-image: url("./images/zan-yBEUD8SWABc-unsplash.jpg");
}

/* Main Content */

.main-title {
    background-color: brown;
}
.main-title h1 {
    text-align: center;
    font-size: 6vw;
    padding: 20px;

}

a {
    color: brown;
}

/* About */

.about {
    display: flex;
    color: aliceblue;
}

#section-container {
    margin: 5vw;
    display: grid;
    grid-template: repeat(10, 1fr) / repeat(10, 1fr);
    width: 100vw;
    height: 80vh;
}

#section-container img {
    grid-area: 1 / 2 / 6 / 8;
    border-radius: 80%;
    width: 120%;
    animation: float 3s ease-in-out infinite;
    z-index: -1;
}

@keyframes float {
    0% { transform:rotate(-3deg); }
    50%  { transform:rotate(3deg); }
    100%   { transform:rotate(-3deg); }   
}

#section-container h1 {
    grid-area: 2 / 6 / span 2 / span 2;
    font-size: 3.5vw;
}

#section-container h2 {
    grid-area: 4 / 5 / span 2 / span 5;
    font-size: 2vw;
}

/* Weekly Challenge */

.challenge {
    display: flex;
    justify-content: center;
    align-items: center;
}


.challenge img {
    width: 20%;
}

.challenge h1 {
    width: 20%;
    color: aliceblue;
    line-height: 3vw;
}


@media only screen and (max-width: 768px) {

    /* headers */

    .main-title h2 {
        font-size: 4vw;
    
    }

    /* about */

    .about {
        flex-direction: column;
    }

    #section-container {
        margin: 5vw;
        display: grid;
        grid-template: repeat(10, 1fr) / repeat(8, 1fr);
        width: 100vw;
        height: 50vh;
    }

    #section-container img {
        grid-area: 1 / 2 / 6 / 8;
        border-radius: 80%;
        width: 80%;
        animation: float 3s ease-in-out infinite;
        z-index: -1;
    }

    #section-container h1 {
        grid-area: 3 / 5 / span 2 / span 2;
        font-size: 7vw;
    }
    
    #section-container h2 {
        grid-area: 8 / 5 / 5 / span 3;
        font-size: 3.5vw;
    }

    /* Weekly Challenge */

    .challenge h1 {
        padding-top: 1%;
        width: 70%;
        color: aliceblue;
        font-size: 4vw;
        line-height: 20px;
    }
}

